k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contact-manager-svc
  namespace: default
  labels:
    app: contact-manager
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: contact-manager
